成功解决删掉 overflow 后的页面显示 bug

--- a/index.scss
+++ b/index.scss
@@ -231,6 +231,7 @@ a {
 }
 @media (max-width: 500px) {
   .site {
+    overflow: auto;
     .markdown-body {
       width: calc(100vw - 80px);
     }
@@ -269,19 +270,19 @@ a {
     &-main {
       width: 100vw;
       transition: all .4s ease;
-      transform: translateX(-210px);
+      transform: translateX(0);
       position: relative;
       padding: 36px 40px;
-      margin-left: 210px;
       &.visible {
-        transform: translateX(0);
+        transform: translateX(210px);
       }
       .site-mask {
         position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.25);
-        transform: translate(-40px, -36px);
         z-index: -1;
         opacity: 0;
         transition: all .4s ease;
